--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
           haxelib --quiet install flixel-tools
           haxelib --quiet install flixel-ui
           haxelib --quiet install hscript
+          haxelib --quiet install hxCodec
           haxelib --quiet install flixel-addons
           haxelib --quiet git hxCodec https://github.com/polybiusproxy/hxcodec
           haxelib --quiet git linc_luajit https://github.com/majigsaw77/linc_luajit.git
