--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,24 +40,24 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@v1.1.5
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.2.2
 
       - name: Install Haxelib
         run: |
-          haxelib --quiet setup /home/runner/haxelib
-          haxelib --quiet install hxcpp > /dev/null
-          haxelib --quiet install lime 7.9.0
-          haxelib --quiet install openfl 9.1.0
-          haxelib --quiet --never install flixel
-          haxelib --quiet run lime setup flixel
-          haxelib --quiet install flixel-tools
-          haxelib --quiet install flixel-ui
-          haxelib --quiet install hscript
-          haxelib --quiet install hxCodec
-          haxelib --quiet install flixel-addons
-          haxelib --quiet git hxCodec https://github.com/polybiusproxy/hxcodec
-          haxelib --quiet git linc_luajit https://github.com/majigsaw77/linc_luajit.git
-          haxelib --quiet git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
+          haxelib setup ~/haxelib
+          haxelib install hxcpp > /dev/null
+          haxelib install lime 7.9.0 --quiet
+          haxelib install openfl 9.1.0 --quiet
+          haxelib --never install flixel 4.9.0 --quiet
+          haxelib run lime setup --quiet
+          haxelib install hscript
+          haxelib install flixel-tools 1.5.1 --quiet
+          haxelib install flixel-ui 2.3.3 --quiet
+          haxelib install hscript --quiet
+          haxelib install flixel-addons 2.10.0 --quiet
+          haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit.git
+          haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
           haxelib list
 
       - name: Create Version Tag
@@ -70,17 +70,16 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0 
-          haxelib set openfl 9.1.0 
-          haxelib list
+          haxelib set lime 7.9.0
+          haxelib set openfl 9.1.0
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Compile
-        run: haxelib run lime build android -release
+        run: haxelib run lime build android --app-version="4.0.0-${{ github.run_id}}"
 
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2.2.4
         with:
-          name: Alt engine Build
-          path: outputs/Alt-Engine.apk
+          name: androidBuild
+          path: export/release/android/bin/app/build/outputs/apk/debug
