--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,15 +46,15 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime 7.9.0 --quiet
-          haxelib install openfl 9.1.0 --quiet
-          haxelib --never install flixel 4.9.0 --quiet
-          haxelib run lime setup --quiet
+          haxelib install lime 7.9.0
+          haxelib install openfl 9.1.0
+          haxelib --never install flixel 4.9.0
+          haxelib run lime setup
           haxelib install hscript
-          haxelib install flixel-tools 1.5.1 --quiet
-          haxelib install flixel-ui 2.3.3 --quiet
-          haxelib install hscript --quiet
-          haxelib install flixel-addons 2.10.0 --quiet
+          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-ui 2.3.3
+          haxelib install hscript
+          haxelib install flixel-addons 2.10.0
           haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit.git
           haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
