--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build
+name: SB Engine Nadogradnja
 
 # Controls when the action will run.
 on:
@@ -16,54 +16,59 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  buildAndroid:
-    name: buildAndroid
+  AndroidBuild:
+    name: AndroidBuild / Андроид Сборка
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Исследование/Checkout
         uses: actions/checkout@v2.3.1
 
-      - name: Setup Android NDK
+      - name: Сохранить состояние/ Save state
+        run: echo "::save-state name={name}::{value}"
+
+      - name: Установка output
+        run: echo "::set-output name={name}::{value}"
+
+      - name: Настройка Android NDK / Setup Android NDK
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
           ndk-version: r21e
 
-      - name: Setup Java JDK
+      - name: Настройка Java JDK / Setup Java JDK
         uses: actions/setup-java@v1
         with:
           java-version: 11
 
-      - name: Setup Android SDK
+      - name:  Настройка Android SDK / setup Android SDK
         uses: android-actions/setup-android@v2
 
-      - name: Setup Haxe
+      - name: Настройка haxe/ haxe setup
         uses: krdlab/setup-haxe@v1.1.5
         with:
-          haxe-version: 4.2.2
+          haxe-version: 4.2.5
 
-      - name: Install Haxelib
+      - name: Установка haxelib/ install haxelib
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
           haxelib install lime 7.9.0
           haxelib install openfl 9.1.0
-          haxelib --never install flixel 4.9.0
-          haxelib run lime setup
+          haxelib --never install flixel
+          haxelib run lime setup flixel
+          haxelib install flixel-tools
+          haxelib install flixel-ui
           haxelib install hscript
-          haxelib install flixel-tools 1.5.1
-          haxelib install flixel-ui 2.3.3
-          haxelib install hscript
-          haxelib install flixel-addons 2.10.0
+          haxelib install flixel-addons
           haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
-          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit.git
+          haxelib git linc_luajit https://github.com/majigsaw77/linc_luajit.git
           haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
           haxelib list
 
-      - name: Create Version Tag
+      - name: Тег Версии/ Version Tag
         run: echo "${{github.run_id}}" > VERSION
 
-      - name: Setup Lime
+      - name: Настройка lime / Lime Setup
         run: |
           haxelib run lime setup -alias -y
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
@@ -75,11 +80,11 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
-      - name: Compile
+      - name: Компиляция/Compile
         run: haxelib run lime build android --app-version="4.0.0-${{ github.run_id}}"
 
-      - name: Publish Artifact
+      - name: Опубликовать сборку/Publish Artefact
         uses: actions/upload-artifact@v2.2.4
         with:
-          name: androidBuild
+          name: Андроид сборка/Android build
           path: export/release/android/bin/app/build/outputs/apk/debug
