--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           haxelib install hscript
           haxelib install flixel-addons
           haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
-          haxelib git linc_luajit https://github.com/RudenkoArts/linc_luajit
+          haxelib git linc_luajit https://github.com/RudenkoArts/linc_luajit.git
           haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
           haxelib list
 
