--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 ### This is a basic workflow to help you get started with Actions
 
-name: SB Engine Nadogradnja
+name: Alt Engine build
 
 # Controls when the action will run.
 on:
@@ -26,7 +26,7 @@ jobs:
       - name: Сохранить состояние/ Save state
         run: echo "::save-state name={name}::{value}"
 
-      - name: Установка output
+      - name: Установка output / output install
         run: echo "::set-output name={name}::{value}"
 
       - name: Настройка Android NDK / Setup Android NDK
@@ -60,9 +60,9 @@ jobs:
           haxelib install flixel-ui
           haxelib install hscript
           haxelib install flixel-addons
-          haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
-          haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
+          haxelib git hxCodec https://github.com/MAJigsaw77/hxCodec
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
+          haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools
           haxelib list
 
       - name: Тег Версии/ Version Tag
