--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: Alt engine
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches: [ Master ]
   pull_request:
-    branches: [ main ]
+    branches: [ Master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -81,4 +81,4 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: Android Build
-          path: export/release/android/bin/app/build/outputs/apk/debug
+          path: export/release/android/bin/apk/debug
