--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: Alt engine
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ Master ]
+    branches: [ main ]
   pull_request:
-    branches: [ Master ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
