--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install polymod
+          haxelib install spinehaxe
           haxelib install hscript
           haxelib install flixel-addons
           haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
